--- a/app/src/main/res/layout/fragment_fire_search.xml
+++ b/app/src/main/res/layout/fragment_fire_search.xml
@@ -24,89 +24,23 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent">
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/constraint_layout1"
-                android:background="@drawable/box"
-
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="20dp">
-
-                <TextView
-                    android:id="@+id/fav_county"
-                    android:text="  Favorite Counties"
-                    android:textSize="16dp"
-
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-
-                    android:layout_marginStart="10dp"
-                    android:layout_marginTop="10dp"/>
-
-                <EditText
-                    android:id="@+id/fav_input"
-                    android:textSize="14dp"
-                    android:inputType="textPersonName"
-                    android:hint="  County Name"
-
-                    android:background="@drawable/box_red"
-
-                    android:layout_width="0dp"
-                    android:layout_height="40dp"
-
-                    app:layout_constraintTop_toBottomOf="@+id/fav_county"
-                    app:layout_constraintStart_toStartOf="@id/constraint_layout1"
-                    app:layout_constraintEnd_toEndOf="@id/constraint_layout1"
-
-                    android:layout_marginTop="5dp"
-                    android:layout_marginEnd="10dp"
-                    android:layout_marginStart="10dp"/>
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/firends_list"
-
-
-                    android:layout_width="0dp"
-                    android:layout_height="200dp"
-
-                    app:layout_constraintTop_toBottomOf="@id/fav_input"
-                    app:layout_constraintStart_toStartOf="@id/fav_input"
-                    app:layout_constraintEnd_toEndOf="@+id/constraint_layout1"
-                    app:layout_constraintBottom_toBottomOf="@+id/constraint_layout1"
-
-                    android:layout_marginTop="5dp"
-                    android:layout_marginBottom="10dp"
-                    android:layout_marginEnd="10dp">
-
-                </androidx.recyclerview.widget.RecyclerView>
-            </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/constraint_layout2"
                 android:background="@drawable/box"
 
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
 
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="@id/constraint_layout1"
-                app:layout_constraintTop_toBottomOf="@id/constraint_layout1"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
 
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
-                android:layout_marginEnd="20dp">
-
+                android:layout_marginEnd="20dp"
+                android:layout_marginBottom="20dp">
                 <TextView
                     android:id="@+id/search_county"
                     android:text="  County"
@@ -188,22 +122,36 @@
 
                     android:layout_marginEnd="10dp" />
 
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/result_list"
-
-                    android:background="@drawable/box_green"
-
-                    android:layout_width="0dp"
-                    android:layout_height="150dp"
-
-                    app:layout_constraintBottom_toBottomOf="@+id/constraint_layout2"
-                    app:layout_constraintEnd_toEndOf="@+id/constraint_layout2"
-                    app:layout_constraintStart_toStartOf="@id/date_input"
-                    app:layout_constraintTop_toBottomOf="@id/date_input"
+                <ScrollView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:layout_constraintTop_toBottomOf="@+id/date_input"
+                    app:layout_constraintBottom_toBottomOf="parent"
 
                     android:layout_marginTop="5dp"
                     android:layout_marginEnd="10dp"
-                    android:layout_marginBottom="10dp"/>
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginStart="10dp">
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" >
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/result_list"
+
+                            android:background="@drawable/box_green"
+
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"/>
+                        </androidx.constraintlayout.widget.ConstraintLayout>
+                </ScrollView>
+
+
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
