--- a/app/src/main/res/layout/single_county.xml
+++ b/app/src/main/res/layout/single_county.xml
@@ -7,16 +7,16 @@ android:layout_margin="16dp"
 android:elevation="8dp"
 app:cardCornerRadius="6dp">
 
-
-
-
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:background="@drawable/ic_gradient">
 
         <ImageButton
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
             android:id="@+id/is_fav"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -29,6 +29,10 @@ app:cardCornerRadius="6dp">
 
 
         <TextView
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
             android:id="@+id/county_name"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
