--- a/app/src/main/res/layout/single_daily_wildfires.xml
+++ b/app/src/main/res/layout/single_daily_wildfires.xml
@@ -14,15 +14,20 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:background="@drawable/ic_gradient">
 
-        <ImageButton
+
+    <ImageButton
 
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:background="#00FFFFFF"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="7dp"
+            android:layout_marginStart="7dp"
+            android:layout_marginBottom="7dp"
             app:srcCompat="@drawable/ic_android_fire"
             app:layout_constraintBottom_toBottomOf="@id/county_name"/>
 
@@ -33,6 +38,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center_horizontal|center_vertical"
+            android:layout_marginTop="7dp"
+            android:layout_marginEnd="7dp"
+            android:layout_marginBottom="7dp"
             android:text="TextView"
             android:textSize="20dp"/>
     </LinearLayout>
