--- a/app/src/main/res/layout/single_fire.xml
+++ b/app/src/main/res/layout/single_fire.xml
@@ -10,7 +10,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@drawable/ic_gradient">
 
         <TextView
             android:id="@+id/county"
@@ -18,6 +19,9 @@
             android:layout_height="wrap_content"
             android:text="İlçe Adı"
             android:gravity="center_horizontal"
+            android:layout_marginTop="7dp"
+            android:layout_marginStart="7dp"
+            android:layout_marginEnd="7dp"
             android:textSize="20sp"/>
 
         <TextView
@@ -27,6 +31,9 @@
             android:text="Tarih"
             android:gravity="center_horizontal"
             android:layout_marginTop="4dp"
+            android:layout_marginBottom="7dp"
+            android:layout_marginStart="7dp"
+            android:layout_marginEnd="7dp"
             android:textSize="16sp" />
     </LinearLayout>
 </androidx.cardview.widget.CardView>
