--- a/app/src/main/res/layout/single_friend.xml
+++ b/app/src/main/res/layout/single_friend.xml
@@ -10,13 +10,19 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@drawable/ic_gradient">
 
-        <TextView
+
+    <TextView
             android:id="@+id/user_name_single_friend"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Kullanıcı adı"
+
+            android:layout_marginTop="7dp"
+            android:layout_marginStart="7dp"
+            android:layout_marginEnd="7dp"
             android:gravity="center_horizontal"
             android:textSize="20sp"/>
 
@@ -25,6 +31,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Email"
+
+            android:layout_marginBottom="7dp"
+            android:layout_marginStart="7dp"
+            android:layout_marginEnd="7dp"
             android:gravity="center_horizontal"
             android:layout_marginTop="4dp"
             android:textSize="16sp" />
