--- a/app/src/main/res/layout/activity_pop_email.xml
+++ b/app/src/main/res/layout/activity_pop_email.xml
@@ -34,7 +34,7 @@
                     android:layout_marginTop="20dp"/>
 
                 <EditText
-                    android:id="@+id/newUserNameInput"
+                    android:id="@+id/newEmailInput"
                     android:ems="10"
                     android:inputType="textPersonName"
 
@@ -53,8 +53,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
 
-                    app:layout_constraintStart_toStartOf="@+id/newUserNameInput"
-                    app:layout_constraintTop_toBottomOf="@+id/newUserNameInput"
+                    app:layout_constraintStart_toStartOf="@+id/newEmailInput"
+                    app:layout_constraintTop_toBottomOf="@+id/newEmailInput"
 
                     android:layout_marginTop="5dp"/>
 
