"author comments added"

--- a/app/src/main/res/layout/activity_fav_counties.xml
+++ b/app/src/main/res/layout/activity_fav_counties.xml
@@ -7,6 +7,8 @@
     android:layout_height="match_parent"
     tools:context=".FavCounties">
 
+  <!--Author: Mehmet Kadri Gofralılar-->
+
 
   <EditText
       android:id="@+id/fav_input"
