--- a/app/src/main/res/layout/activity_send_email.xml
+++ b/app/src/main/res/layout/activity_send_email.xml
@@ -6,6 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".SendEmailActivity">
 
+    <!--Author: Mehmet Kadri Gofralılar-->
+
     <TextView
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
