--- a/app/src/main/res/layout/activity_sign_in_page.xml
+++ b/app/src/main/res/layout/activity_sign_in_page.xml
@@ -6,6 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".SignUpPageActivity">
 
+    <!--Author: Mehmet Kadri Gofralılar-->
+
 
     <ScrollView
         android:layout_width="match_parent"
