--- a/app/src/main/res/layout/activity_sign_up_page.xml
+++ b/app/src/main/res/layout/activity_sign_up_page.xml
@@ -8,6 +8,8 @@
 
     tools:context=".SignUpPageActivity">
 
+    <!--Author: Mehmet Kadri Gofralılar-->
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
