--- a/app/src/main/res/layout/activity_guide_page.xml
+++ b/app/src/main/res/layout/activity_guide_page.xml
@@ -6,6 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".GuidePageActivity">
 
+    <!--Author: Mehmet Kadri Gofralılar-->
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -25,7 +27,7 @@
 
                 android:layout_height="220dp"
 
-                android:layout_marginTop="148dp"
+                android:layout_marginTop="80dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
