--- a/app/src/main/res/layout/activity_pop_delete_account.xml
+++ b/app/src/main/res/layout/activity_pop_delete_account.xml
@@ -6,6 +6,8 @@
     android:layout_height="wrap_content"
     android:background="#00555555">
 
+    <!--Author: Mehmet Kadri Gofralılar-->
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
