--- a/app/src/main/res/layout/activity_pop_username.xml
+++ b/app/src/main/res/layout/activity_pop_username.xml
@@ -6,6 +6,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#00555555">
 
+    <!--Author: Mehmet Kadri Gofralılar-->
+
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
