--- a/app/src/main/res/layout/fragment_article.xml
+++ b/app/src/main/res/layout/fragment_article.xml
@@ -6,6 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".ui.ArticleFragment">
 
+    <!--Author: Mehmet Kadri Gofralılar-->
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
