--- a/app/src/main/res/layout/fragment_fire_add.xml
+++ b/app/src/main/res/layout/fragment_fire_add.xml
@@ -6,6 +6,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.FireAddFragment">
 
+    <!--Author: Mehmet Kadri Gofralılar-->
+
     <ScrollView
         android:id="@+id/scroll_view"
 
