--- a/app/src/main/res/layout/single_county.xml
+++ b/app/src/main/res/layout/single_county.xml
@@ -7,6 +7,9 @@ android:layout_margin="16dp"
 android:elevation="8dp"
 app:cardCornerRadius="6dp">
 
+    <!--Construction Author: Hasan Ali Özkan-->
+    <!--Design Author: Mehmet Kadri Gofralılar-->
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
