--- a/app/src/main/res/layout/single_daily_wildfires.xml
+++ b/app/src/main/res/layout/single_daily_wildfires.xml
@@ -7,9 +7,8 @@
     android:elevation="8dp"
     app:cardCornerRadius="6dp">
 
-
-
-
+    <!--Construction Author: Hasan Ali Özkan-->
+    <!--Design Author: Mehmet Kadri Gofralılar-->
 
     <LinearLayout
         android:layout_width="match_parent"
