--- a/app/src/main/res/layout/single_notification.xml
+++ b/app/src/main/res/layout/single_notification.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--Author: Hasan Ali Özkan-->
+
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -7,7 +7,8 @@
     android:layout_margin="16dp"
     android:elevation="8dp"
     app:cardCornerRadius="6dp">
-
+    <!--Construction Author: Hasan Ali Özkan-->
+    <!--Design Author: Mehmet Kadri Gofralılar-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
