--- a/app/src/main/res/layout/activity_fav_counties.xml
+++ b/app/src/main/res/layout/activity_fav_counties.xml
@@ -9,11 +9,10 @@
 
   <!--Author: Mehmet Kadri Gofralılar-->
 
-
-  <EditText
-      android:id="@+id/fav_input"
+  <LinearLayout
+      android:id="@+id/fav_input1"
       android:layout_width="0dp"
-      android:layout_height="40dp"
+      android:layout_height="54dp"
       android:layout_marginStart="10dp"
 
       android:layout_marginTop="30dp"
@@ -21,17 +20,32 @@
       android:layout_marginEnd="10dp"
       android:background="@drawable/box_red"
 
-      android:hint="  County Name"
-      android:inputType="textPersonName"
-      android:textSize="14dp"
-
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent" />
+      app:layout_constraintTop_toTopOf="parent"
 
-  <androidx.recyclerview.widget.RecyclerView
-      android:id="@+id/county_list"
+      android:orientation="vertical">
+      <EditText
+          android:id="@+id/fav_input"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
 
+          android:layout_marginStart="7dp"
+          android:layout_marginTop="7dp"
+          android:layout_marginEnd="7dp"
+          android:layout_marginBottom="7dp"
+
+          android:hint="  County Name"
+          android:inputType="textPersonName"
+          android:textSize="14dp"
+
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toTopOf="parent" />
+  </LinearLayout>
+
+  <LinearLayout
+      android:id="@+id/county_list1"
 
       android:layout_width="0dp"
       android:layout_height="0dp"
@@ -41,8 +55,23 @@
       android:layout_marginBottom="10dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="@id/fav_input"
-      app:layout_constraintTop_toBottomOf="@id/fav_input">
+      app:layout_constraintStart_toStartOf="@id/fav_input1"
+      app:layout_constraintTop_toBottomOf="@id/fav_input1"
+      android:background="@drawable/box"
 
-  </androidx.recyclerview.widget.RecyclerView>
+      android:orientation="vertical">
+      <androidx.recyclerview.widget.RecyclerView
+          android:id="@+id/county_list"
+
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+
+          android:layout_marginTop="7dp"
+          android:layout_marginEnd="7dp"
+          android:layout_marginBottom="7dp"
+          android:layout_marginStart="7dp">
+
+      </androidx.recyclerview.widget.RecyclerView>
+  </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
