--- a/app/src/main/res/layout/fragment_fire_add.xml
+++ b/app/src/main/res/layout/fragment_fire_add.xml
@@ -38,16 +38,13 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"/>
 
-            <EditText
-                android:id="@+id/search_county_input"
-                android:inputType="textPersonName"
-                android:hint="  County Name"
-                android:textSize="14dp"
+            <LinearLayout
+                android:id="@+id/search_county_input1"
 
                 android:background="@drawable/box_red"
 
                 android:layout_width="0dp"
-                android:layout_height="40dp"
+                android:layout_height="54dp"
 
                 app:layout_constraintTop_toBottomOf="@+id/search_county"
                 app:layout_constraintStart_toStartOf="parent"
@@ -55,7 +52,20 @@
 
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="10dp"
-                android:layout_marginStart="10dp" />
+                android:layout_marginStart="10dp" >
+                <EditText
+                    android:id="@+id/search_county_input"
+                    android:inputType="textPersonName"
+                    android:textSize="14dp"
+
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+
+                    android:layout_marginStart="7dp"
+                    android:layout_marginTop="7dp"
+                    android:layout_marginEnd="7dp"
+                    android:layout_marginBottom="7dp"/>
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/date"
@@ -65,21 +75,17 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
-                app:layout_constraintTop_toBottomOf="@id/search_county_input"
+                app:layout_constraintTop_toBottomOf="@id/search_county_input1"
                 app:layout_constraintStart_toStartOf="parent"
 
                 android:layout_marginTop="5dp"
                 android:layout_marginStart="10dp"/>
-
-            <EditText
-                android:id="@+id/date_input"
-                android:inputType="date"
-                android:textSize="14dp"
-
+            <LinearLayout
+                android:id="@+id/date_input1"
                 android:background="@drawable/box_green"
 
                 android:layout_width="0dp"
-                android:layout_height="40dp"
+                android:layout_height="54dp"
 
                 app:layout_constraintTop_toBottomOf="@+id/date"
                 app:layout_constraintStart_toStartOf="parent"
@@ -87,7 +93,22 @@
 
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="10dp"
-                android:layout_marginStart="10dp"/>
+                android:layout_marginStart="10dp"
+                >
+                <EditText
+                    android:id="@+id/date_input"
+                    android:inputType="date"
+                    android:textSize="14dp"
+
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+
+                    android:layout_marginStart="7dp"
+                    android:layout_marginTop="7dp"
+                    android:layout_marginEnd="7dp"
+                    android:layout_marginBottom="7dp"/>
+            </LinearLayout>
+
 
             <ImageButton
                 android:id="@+id/button_calendar"
@@ -96,8 +117,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
-                app:layout_constraintStart_toEndOf="@+id/date_input"
-                app:layout_constraintTop_toTopOf="@+id/date_input"
+                app:layout_constraintStart_toEndOf="@+id/date_input1"
+                app:layout_constraintTop_toTopOf="@+id/date_input1"
 
                 android:layout_marginStart="16dp" />
 
@@ -109,21 +130,19 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
-                app:layout_constraintTop_toBottomOf="@id/date_input"
+                app:layout_constraintTop_toBottomOf="@id/date_input1"
                 app:layout_constraintStart_toStartOf="parent"
 
                 android:layout_marginTop="5dp"
                 android:layout_marginStart="10dp" />
 
-            <EditText
-                android:id="@+id/time_input"
-                android:inputType="date"
-                android:textSize="14dp"
+            <LinearLayout
+                android:id="@+id/time_input1"
 
                 android:background="@drawable/box_red"
 
                 android:layout_width="0dp"
-                android:layout_height="40dp"
+                android:layout_height="54dp"
 
                 app:layout_constraintTop_toBottomOf="@+id/time"
                 app:layout_constraintStart_toStartOf="parent"
@@ -131,7 +150,21 @@
 
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="10dp"
-                android:layout_marginStart="10dp" />
+                android:layout_marginStart="10dp">
+                <EditText
+                    android:id="@+id/time_input"
+                    android:inputType="date"
+                    android:textSize="14dp"
+
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+
+                    android:layout_marginStart="7dp"
+                    android:layout_marginTop="7dp"
+                    android:layout_marginEnd="7dp"
+                    android:layout_marginBottom="7dp"/>
+            </LinearLayout>
+
 
             <ImageButton
                 android:id="@+id/button_clock"
@@ -140,8 +173,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
-                app:layout_constraintStart_toEndOf="@+id/time_input"
-                app:layout_constraintTop_toTopOf="@+id/time_input"
+                app:layout_constraintStart_toEndOf="@+id/time_input1"
+                app:layout_constraintTop_toTopOf="@+id/time_input1"
 
                 android:layout_marginStart="16dp" />
 
@@ -160,7 +193,7 @@
                 android:textSize="10dp"
 
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/time_input" />
+                app:layout_constraintTop_toBottomOf="@id/time_input1" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
