--- a/app/src/main/res/layout/fragment_fire_search.xml
+++ b/app/src/main/res/layout/fragment_fire_search.xml
@@ -57,16 +57,13 @@
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="10dp"/>
 
-                <EditText
-                    android:id="@+id/search_county_input"
-                    android:hint="  County Name"
-                    android:inputType="textPersonName"
-                    android:textSize="14dp"
+                <LinearLayout
+                    android:id="@+id/search_county_input1"
 
                     android:background="@drawable/box_red"
 
                     android:layout_width="0dp"
-                    android:layout_height="40dp"
+                    android:layout_height="54dp"
 
                     app:layout_constraintEnd_toEndOf="@id/constraint_layout2"
                     app:layout_constraintStart_toStartOf="@id/constraint_layout2"
@@ -74,7 +71,22 @@
 
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="5dp"
-                    android:layout_marginEnd="10dp"/>
+                    android:layout_marginEnd="10dp">
+                    <EditText
+                        android:id="@+id/search_county_input"
+                        android:hint="  County Name"
+                        android:inputType="textPersonName"
+                        android:textSize="14dp"
+
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+
+                        android:layout_marginStart="7dp"
+                        android:layout_marginTop="7dp"
+                        android:layout_marginEnd="7dp"
+                        android:layout_marginBottom="7dp"/>
+                </LinearLayout>
+
 
                 <TextView
                     android:id="@+id/date"
@@ -85,20 +97,19 @@
                     android:layout_height="wrap_content"
 
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/search_county_input"
+                    app:layout_constraintTop_toBottomOf="@id/search_county_input1"
 
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="5dp"/>
-
-                <EditText
-                    android:id="@+id/date_input"
+                <LinearLayout
+                    android:id="@+id/date_input1"
                     android:inputType="date"
                     android:textSize="14dp"
 
                     android:background="@drawable/box_red"
 
                     android:layout_width="0dp"
-                    android:layout_height="40dp"
+                    android:layout_height="54dp"
 
                     app:layout_constraintEnd_toStartOf="@id/add_button"
                     app:layout_constraintStart_toStartOf="@id/constraint_layout2"
@@ -106,7 +117,20 @@
 
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="5dp"
-                    android:layout_marginEnd="10dp"/>
+                    android:layout_marginEnd="10dp">
+                    <EditText
+                        android:id="@+id/date_input"
+                        android:inputType="date"
+                        android:textSize="14dp"
+
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+
+                        android:layout_marginStart="7dp"
+                        android:layout_marginTop="7dp"
+                        android:layout_marginEnd="7dp"
+                        android:layout_marginBottom="7dp"/>
+                </LinearLayout>
 
                 <Button
                     android:id="@+id/add_button"
@@ -120,14 +144,15 @@
                     android:layout_height="40dp"
 
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="@id/date_input"
+                    app:layout_constraintTop_toTopOf="@id/date_input1"
+                    app:layout_constraintBottom_toBottomOf="@id/date_input1"
 
                     android:layout_marginEnd="10dp" />
 
                 <ScrollView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    app:layout_constraintTop_toBottomOf="@+id/date_input"
+                    app:layout_constraintTop_toBottomOf="@+id/date_input1"
                     app:layout_constraintBottom_toBottomOf="parent"
 
                     android:layout_marginTop="5dp"
@@ -137,14 +162,18 @@
 
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent" >
+                        android:layout_height="match_parent"
+                        android:background="@drawable/box_green">
                         <androidx.recyclerview.widget.RecyclerView
                             android:id="@+id/result_list"
 
-                            android:background="@drawable/box_green"
-
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
+
+                            android:layout_marginTop="7dp"
+                            android:layout_marginStart="7dp"
+                            android:layout_marginEnd="7dp"
+                            android:layout_marginBottom="7dp"
 
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
