--- a/app/src/main/res/layout/fragment_friends.xml
+++ b/app/src/main/res/layout/fragment_friends.xml
@@ -24,15 +24,12 @@
 
             >
 
-            <EditText
-                android:id="@+id/friend_name"
-                android:textSize="14dp"
-                android:inputType="textPersonName"
-                android:hint="  Friend Name"
+            <LinearLayout
+                android:id="@+id/friend_name1"
 
                 android:background="@drawable/box_red"
                 android:layout_width="0dp"
-                android:layout_height="40dp"
+                android:layout_height="54dp"
 
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="10dp"
@@ -40,10 +37,29 @@
 
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
+                app:layout_constraintEnd_toEndOf="parent"
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/firends_list"
+                android:orientation="vertical">
+
+
+                <EditText
+                    android:id="@+id/friend_name"
+                    android:textSize="14dp"
+                    android:inputType="textPersonName"
+                    android:hint="  Friend Name"
+
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+
+                    android:layout_marginTop="7dp"
+                    android:layout_marginEnd="7dp"
+                    android:layout_marginStart="7dp"
+                    android:layout_marginBottom="7dp"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/friends_list1"
+
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:background="@drawable/box_green"
@@ -51,12 +67,25 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="10dp"
 
-                app:layout_constraintTop_toBottomOf="@+id/friend_name"
-                app:layout_constraintStart_toStartOf="@+id/friend_name"
-                app:layout_constraintEnd_toEndOf="@+id/friend_name"
-                app:layout_constraintBottom_toBottomOf="parent">
+                app:layout_constraintTop_toBottomOf="@+id/friend_name1"
+                app:layout_constraintStart_toStartOf="@+id/friend_name1"
+                app:layout_constraintEnd_toEndOf="@+id/friend_name1"
+                app:layout_constraintBottom_toBottomOf="parent"
 
-            </androidx.recyclerview.widget.RecyclerView>
+                android:orientation="vertical">
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/friends_list"
+
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+
+                    android:layout_marginTop="7dp"
+                    android:layout_marginBottom="7dp"
+                    android:layout_marginStart="7dp"
+                    android:layout_marginEnd="7dp">
+
+                </androidx.recyclerview.widget.RecyclerView>
+            </LinearLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
