--- a/app/src/main/res/layout/single_notification.xml
+++ b/app/src/main/res/layout/single_notification.xml
@@ -25,6 +25,7 @@
             android:layout_marginTop="7dp"
             android:layout_marginStart="7dp"
             android:layout_marginEnd="7dp"
+            android:layout_marginBottom="7dp"
             android:textSize="20sp"/>
 
 
